src/snapshots/squawk__parse__tests__create_role_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateRoleStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                1,
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "canlogin",
                                    ),
                                    "location": Number(
                                        30,
                                    ),
                                }),
                            }),
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "A_Const": Object({
                                            "location": Number(
                                                45,
                                            ),
                                            "val": Object({
                                                "String": Object({
                                                    "str": String(
                                                        "jw8s0F4",
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "password",
                                    ),
                                    "location": Number(
                                        36,
                                    ),
                                }),
                            }),
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "2005-01-01",
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "validUntil",
                                    ),
                                    "location": Number(
                                        60,
                                    ),
                                }),
                            }),
                        ]),
                        "role": String(
                            "miriam",
                        ),
                        "stmt_type": Number(
                            0,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    84,
                ),
            },
        ),
    ],
)
