src/snapshots/squawk__parse__tests__create_sequence_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateSeqStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                101,
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "start",
                                    ),
                                    "location": Number(
                                        24,
                                    ),
                                }),
                            }),
                        ]),
                        "sequence": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    17,
                                ),
                                "relname": String(
                                    "serial",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
