src/snapshots/squawk__parse__tests__create_transform_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateTransformStmt(
                    Object({
                        "fromsql": Object({
                            "ObjectWithArgs": Object({
                                "objargs": Array([
                                    Object({
                                        "TypeName": Object({
                                            "location": Number(
                                                96,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "internal",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                ]),
                                "objname": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "hstore_to_plpython",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        "lang": String(
                            "plpythonu",
                        ),
                        "tosql": Object({
                            "ObjectWithArgs": Object({
                                "objargs": Array([
                                    Object({
                                        "TypeName": Object({
                                            "location": Number(
                                                151,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "internal",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                ]),
                                "objname": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "plpython_to_hstore",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        "type_name": Object({
                            "TypeName": Object({
                                "location": Number(
                                    22,
                                ),
                                "names": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "hstore",
                                            ),
                                        }),
                                    }),
                                ]),
                                "typemod": Number(
                                    -1,
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    162,
                ),
            },
        ),
    ],
)
